--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+.bulldog-logs
 
+# MISC
+.DS_Store
+.idea/
 # Dependency directories (remove the comment below to include it)
-# vendor/
+vendor/
